@@ -20,7 +20,6 @@ package com.exedio.cope.instrument;
 
 import static java.util.Objects.requireNonNull;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 import javax.annotation.processing.AbstractProcessor;
@@ -70,6 +69,6 @@ abstract class JavacProcessor extends AbstractProcessor
 	@Override
 	public Set<String> getSupportedAnnotationTypes()
 	{
-		return Collections.singleton("*");
+		return Set.of("*");
 	}
 }
