@@ -335,7 +335,7 @@ public final class Query<R> implements Serializable
 
 	public List<Join> getJoins()
 	{
-		return joins==null ? Collections.emptyList() : Collections.unmodifiableList(joins);
+		return joins==null ? List.of() : Collections.unmodifiableList(joins);
 	}
 
 
@@ -426,7 +426,7 @@ public final class Query<R> implements Serializable
 	public List<Boolean> getOrderByAscending()
 	{
 		if(orderAscending==null)
-			return Collections.emptyList();
+			return List.of();
 
 		final ArrayList<Boolean> result = new ArrayList<>(orderAscending.length);
 		for(final boolean b : orderAscending)
@@ -747,7 +747,7 @@ public final class Query<R> implements Serializable
 			final List<QueryInfo> queryInfos = transaction.queryInfos;
 			if(queryInfos!=null)
 				queryInfos.add(new QueryInfo("skipped search because " + (pageLimit==0 ? "limit==0" : "condition==false")));
-			return Collections.emptyList();
+			return List.of();
 		}
 
 		return Collections.unmodifiableList(castQL(transaction.search(this, Mode.SEARCH)));
@@ -997,7 +997,7 @@ public final class Query<R> implements Serializable
 		}
 
 		@SuppressWarnings({"unchecked", "rawtypes"}) // OK: for singleton property
-		private static final Result EMPTY = new Result(Collections.emptyList(), 0, 0);
+		private static final Result EMPTY = new Result(List.of(), 0, 0);
 
 		// ------------------- deprecated stuff -------------------
 
